--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 server.port=8000
+spring.mvc.servlet.path=/api
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/online_chess
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
+sprint.flyway.enabled=false
 sprint.flyway.url=jdbc:postgresql://localhost:5432/online_chess
 sprint.flyway.user=postgres
 sprint.flyway.password=postgres
 
-okta.oauth2.issuer=https://dev-79409757.okta.com/oauth2/default
-okta.oauth2.client-id=0oaf76y17ton5ZSsE5d7
-okta.oauth2.client-secret=zRTitLaJupemTt0kjmMtrAgA8WuZPt4qIuCJygL-5z57lyLZ2tKlO0urOwVmz-tg
+okta.oauth2.issuer=https://dev-nmly5aeq5lcb2hfi.us.auth0.com/
+okta.oauth2.audience=OnlineChess.API
