added service classes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-nmly5aeq5lcb2hfi.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.audiences=OnlineChess.API
 
 sprint.flyway.enabled=false
 sprint.flyway.url=jdbc:postgresql://localhost:5432/online_chess
