added readme file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-nmly5aeq5lcb2hfi.us.auth0.com/
 spring.security.oauth2.resourceserver.jwt.audiences=OnlineChess.API
 
-sprint.flyway.enabled=false
-sprint.flyway.url=jdbc:postgresql://localhost:5432/online_chess
-sprint.flyway.user=postgres
-sprint.flyway.password=postgres
+spring.flyway.enabled=false
+spring.flyway.url=jdbc:postgresql://localhost:5432/online_chess
+spring.flyway.user=postgres
+spring.flyway.password=postgres
 
 okta.oauth2.issuer=https://dev-nmly5aeq5lcb2hfi.us.auth0.com/
 okta.oauth2.audience=OnlineChess.API
