--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -68,7 +68,10 @@
               "buildTarget": "online-chess-app:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 8001
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
