--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "ignorePatterns": [
-    // "projects/**/*"
+    "projects/ngx-chess-board/**/*"
   ],
   "overrides": [
     {
