--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-spring.mvc.servlet.path=/api
+#spring.mvc.servlet.path=/api
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/online_chess
 spring.datasource.username=postgres
