implemented game controller

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8000
 #spring.mvc.servlet.path=/api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_chess
+spring.datasource.url=jdbc:postgresql://localhost:5432/ChessMateDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,7 +10,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-nmly5aeq5lcb2hf
 spring.security.oauth2.resourceserver.jwt.audiences=OnlineChess.API
 
 spring.flyway.enabled=false
-spring.flyway.url=jdbc:postgresql://localhost:5432/online_chess
+spring.flyway.url=jdbc:postgresql://localhost:5432/ChessMateDB
 spring.flyway.user=postgres
 spring.flyway.password=postgres
 
